0 dependency support (UNSTABLE + No troll commands :()